--- a/FavouritePlaces/Base.lproj/Main.storyboard
+++ b/FavouritePlaces/Base.lproj/Main.storyboard
@@ -11,18 +11,74 @@
         <scene sceneID="MXk-Bd-86c">
             <objects>
                 <tableViewController id="atB-6D-zh2" customClass="MainViewController" customModule="FavouritePlaces" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="DKb-wV-K23">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="DKb-wV-K23">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="Usl-Yu-nIe" customClass="MainTableViewCell" customModule="FavouritePlaces" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="320" height="43.5"/>
+                                <rect key="frame" x="0.0" y="28" width="320" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Usl-Yu-nIe" id="rvY-QO-EcI">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vhl-Iw-bQ4">
+                                            <rect key="frame" x="16" y="12.5" width="75" height="75"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="75" id="07P-bD-jHS"/>
+                                                <constraint firstAttribute="width" constant="75" id="D65-fX-m1f"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8A9-FW-GIL">
+                                            <rect key="frame" x="99" y="4" width="205" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="N4B-d5-AUK"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="EuphemiaUCAS-Italic" family="Euphemia UCAS" pointSize="20"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z03-l6-wuC">
+                                            <rect key="frame" x="99" y="42" width="205" height="15"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="15" id="Fxx-Fw-Che"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vpa-99-HD4">
+                                            <rect key="frame" x="99" y="67" width="205" height="15"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="15" id="hkn-kn-rCI"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="vhl-Iw-bQ4" firstAttribute="leading" secondItem="rvY-QO-EcI" secondAttribute="leading" constant="16" id="74M-r0-m9Z"/>
+                                        <constraint firstItem="z03-l6-wuC" firstAttribute="leading" secondItem="vhl-Iw-bQ4" secondAttribute="trailing" constant="8" id="BIP-Vz-ifw"/>
+                                        <constraint firstItem="8A9-FW-GIL" firstAttribute="top" secondItem="rvY-QO-EcI" secondAttribute="topMargin" constant="-7" id="CFy-d5-IdP"/>
+                                        <constraint firstItem="vpa-99-HD4" firstAttribute="trailing" secondItem="rvY-QO-EcI" secondAttribute="trailingMargin" id="LRj-Bp-nYx"/>
+                                        <constraint firstItem="8A9-FW-GIL" firstAttribute="leading" secondItem="vhl-Iw-bQ4" secondAttribute="trailing" constant="8" id="NkR-gT-UkA"/>
+                                        <constraint firstItem="vhl-Iw-bQ4" firstAttribute="centerY" secondItem="rvY-QO-EcI" secondAttribute="centerY" id="cTD-nL-75z"/>
+                                        <constraint firstItem="z03-l6-wuC" firstAttribute="top" secondItem="8A9-FW-GIL" secondAttribute="bottom" constant="8" id="go8-5i-sCD"/>
+                                        <constraint firstItem="vpa-99-HD4" firstAttribute="leading" secondItem="vhl-Iw-bQ4" secondAttribute="trailing" constant="8" id="i0D-zQ-wls"/>
+                                        <constraint firstItem="8A9-FW-GIL" firstAttribute="trailing" secondItem="rvY-QO-EcI" secondAttribute="trailingMargin" id="lYd-qS-bga"/>
+                                        <constraint firstItem="vpa-99-HD4" firstAttribute="top" secondItem="z03-l6-wuC" secondAttribute="bottom" constant="10" id="m1p-WU-Qsm"/>
+                                        <constraint firstItem="vpa-99-HD4" firstAttribute="bottom" secondItem="rvY-QO-EcI" secondAttribute="bottomMargin" constant="-7" id="veX-s5-LwS"/>
+                                        <constraint firstItem="z03-l6-wuC" firstAttribute="trailing" secondItem="rvY-QO-EcI" secondAttribute="trailingMargin" id="vzI-DN-aRF"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="imageOfPlace" destination="vhl-Iw-bQ4" id="3rw-CB-bN6"/>
+                                    <outlet property="locationOfPlaceLabel" destination="z03-l6-wuC" id="N6o-hU-KvW"/>
+                                    <outlet property="nameOfPlaceLabel" destination="8A9-FW-GIL" id="yYF-uB-la7"/>
+                                    <outlet property="typeOfPlaceLabel" destination="vpa-99-HD4" id="Xgu-WB-yrU"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -34,7 +90,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KsA-P7-Oba" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="534" y="-279"/>
+            <point key="canvasLocation" x="532.5" y="-279.92957746478874"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="JCn-j9-hye">
