Added BaseViewController for customization

--- a/FavouritePlaces/Base.lproj/LaunchScreen.storyboard
+++ b/FavouritePlaces/Base.lproj/LaunchScreen.storyboard
@@ -28,7 +28,7 @@
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="217" id="Vot-g9-yF2"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="31"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
