--- a/FavouritePlaces/Base.lproj/Main.storyboard
+++ b/FavouritePlaces/Base.lproj/Main.storyboard
@@ -160,8 +160,43 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="200" id="hia-4b-ttD">
+                                        <rect key="frame" x="0.0" y="453" width="414" height="200"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hia-4b-ttD" id="PJZ-Nb-AFl">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Jh5-pB-BUe">
+                                                    <rect key="frame" x="16" y="8" width="382" height="188"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TJe-2R-OBj">
+                                                            <rect key="frame" x="0.0" y="0.0" width="382" height="21.333333333333332"/>
+                                                            <fontDescription key="fontDescription" name="EuphemiaUCAS-Italic" family="Euphemia UCAS" pointSize="16"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="qZl-1c-SlQ">
+                                                            <rect key="frame" x="0.0" y="25.333333333333329" width="382" height="162.66666666666669"/>
+                                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                            <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <fontDescription key="fontDescription" name="EuphemiaUCAS" family="Euphemia UCAS" pointSize="16"/>
+                                                            <textInputTraits key="textInputTraits"/>
+                                                        </textView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="Jh5-pB-BUe" secondAttribute="trailing" constant="16" id="5Nq-ef-TL6"/>
+                                                <constraint firstAttribute="bottom" secondItem="Jh5-pB-BUe" secondAttribute="bottom" constant="4" id="X3S-fF-Dcx"/>
+                                                <constraint firstItem="Jh5-pB-BUe" firstAttribute="leading" secondItem="PJZ-Nb-AFl" secondAttribute="leading" constant="16" id="fEe-Ii-hgn"/>
+                                                <constraint firstItem="Jh5-pB-BUe" firstAttribute="top" secondItem="PJZ-Nb-AFl" secondAttribute="top" constant="8" id="tEl-pZ-Kru"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="140" id="wI8-Ot-Kcq">
-                                        <rect key="frame" x="0.0" y="453" width="414" height="140"/>
+                                        <rect key="frame" x="0.0" y="653" width="414" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wI8-Ot-Kcq" id="nDb-qT-Bzv">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="140"/>
@@ -201,6 +236,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="addButton" destination="630-su-C6M" id="t5d-fn-U7r"/>
+                        <outlet property="placeDesciptionTV" destination="qZl-1c-SlQ" id="P7v-lr-oAJ"/>
                         <outlet property="placeImage" destination="re8-IQ-zbX" id="mKG-Fv-8u0"/>
                         <outlet property="placeLocationTF" destination="dSG-20-5S6" id="czF-WH-j13"/>
                         <outlet property="placeNameTF" destination="fmv-2f-gpM" id="yzw-yB-0dA"/>
